# pymerc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  shell.py
.github/workflows/: ci.yml
examples/: calculate_ideal_labour_from_recipes.py  fix_labour.py  inventory_report.py  town_scoreboard.py
pymerc/: client.py  exceptions.py
pymerc/api/: buildings.py  static.py  towns.py  transports.py
pymerc/api/models/: buildings.py  businesses.py  common.py  player.py  static.py  towns.py  transports.py
pymerc/game/: building.py  exports.py  imports.py  player.py  recipe.py  recipe_manager.py  storehouse.py  town.py  transport.py
tests/: conftest.py
tests/api/: test_buildings.py  test_businesses.py  test_map.py  test_player.py  test_static.py  test_towns.py  test_transports.py
